objects/PROSAgreement__Agreement_Extension__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__AgreementChangesetId__c</fullName>
        <label>Agreement Changeset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementError__c</fullName>
        <label>Agreement Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementQuoteId__c</fullName>
        <label>Agreement Quote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipName>PROS_Agreement_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementStatus__c</fullName>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action_Status__c</fullName>
        <label>Agreement Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Agreement_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ExtensionLength__c</fullName>
        <label>Extension Length (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__External_Agreement_Id__c</fullName>
        <label>External Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__NewEndDate__c</fullName>
        <formula>IF(!ISBLANK(PROSAgreement__ExtensionLength__c), TEXT(PROSAgreement__Contract_End_Date__c + PROSAgreement__ExtensionLength__c), NULL)</formula>
        <label>New End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PROS Agreement Extension</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreement Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PROSAgreement__NegativeValueRestriction</fullName>
        <active>true</active>
        <errorConditionFormula>PROSAgreement__ExtensionLength__c &lt; 1</errorConditionFormula>
        <errorDisplayField>PROSAgreement__ExtensionLength__c</errorDisplayField>
        <errorMessage>Cannot enter a value less than 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PROSAgreement__Validate_Agreement_Action_Status</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(PROSAgreement__Agreement_Action_Status__c = &quot;&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;start&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;success&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;failure&quot;))</errorConditionFormula>
        <errorDisplayField>PROSAgreement__Agreement_Action_Status__c</errorDisplayField>
        <errorMessage>Agreement Action Status is not valid.
Allowed Action Status: Start, Success and Failure.</errorMessage>
    </validationRules>
</CustomObject>